--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,40 @@
 {% block title %}about{% endblock %}
 
 {% block body %}
-    <h2>This is about us:</h2>
-    <p>We love rides just like you.</p>
-    <p>Video will be here soon!</p>
+    <div class="container">
+        <div align="center">
+        <h2>This is about us:</h2>
+        <p>We love rides just like you!</p>
+
+
+            <div>
+            <p style="float: left;"><img src="/static/images/ff8.png" alt="car image" height="400" width="400" style="border:10px solid black;" hspace="5" ></p>
+            <p align="justify">Cars are one of the biggest financial purchases in your life.
+                    In your lifetime, you'll spend over five years in one. Yet all too often,
+                    from search to the sale, buyers and sellers dread the process.<br>
+
+                    From your first car to your fifteenth, we want to make buying and selling a car
+                    something you can look forward to. We’re taking a data driven and user centric approach to
+                    create new and better ways to buy and sell cars.Like other vehicles, cars are made in different
+                    shapes and sizes, for people with different needs. Some small "city" cars carry only two to four people,
+                    with only small space for luggage. Other types are able to carry many passengers or heavy loads.<br>
+
+                    For example, station wagons or estate cars carry from 5 to 9 people, or fewer people with lots of luggage.
+                    There are many different sizes of vans, such as minivans, which are made for families, and even small pickup trucks,
+                    which are car-like vehicles made for carrying medium-sized loads; for example, goods for delivery or plumber's and
+                    builder's tools and materials. Heavy lorries are used to carry deliveries and heavy loads.<br>
+
+                    In order for a car to work, it must have a power source, where the car gets the energy it needs to turn the wheels.
+                    Most cars use some kind of fuel to make an internal combustion engine run. The power from the engine then goes to the
+                    wheels through a transmission, which has a set of gears that makes the car go faster or slower. The most common fuel
+                    in small to medium-size cars is petrol, which is called gasoline in America (people just call it "gas" though).
+                    Some cars burn diesel fuel, which is used in big trucks and buses, and a few use wood gas. In some countries,
+                    such as Brazil and Sweden, a mixture of ethanol and petrol, called gasohol in Brazil and E-85 in Sweden,
+                    is used as automobile fuel. There are cars designed to run on more than one type of fuel - these are called
+                    "flex-fuel" and are very rare.<br>
+                </p>
+            </div>
+        </div>
+</div>
+
 {% endblock %}
