--- a/templates/create.html
+++ b/templates/create.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}upload{% endblock %}
 
 {% block body %}
-<h2>This is where you can create and Vehicle data</h2>
-    <form method="post" action="{% url 'create' %}" enctype="multipart/form-data">{% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="create" class="btn btn-primary">
-    </form>
+    <div class="container">
+    <h2>Create vehicle data</h2>
+        <form method="post" action="{% url 'create' %}" enctype="multipart/form-data">{% csrf_token %}
+            {{form|crispy}}<br>
+            <input type="submit" value="create" class="btn btn-primary">
+        </form>
+    </div>
 
 {% endblock %}
