--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,9 @@
-<nav>
-    <a href="{% url 'index' %}">home</a> |
-    <a href="{% url 'create' %}">add</a> |
-    <a href="{% url 'search' %}">search</a> |
-    <a href="{% url 'about' %}">about</a> |
-    <a href="{% url 'contact' %}">contact</a> |
-</nav>
+<div align="center">
+    <nav>
+        <a href="{% url 'index' %}">Home</a> |
+        <a href="{% url 'create' %}">Add</a> |
+        <a href="{% url 'search' %}">Search</a> |
+        <a href="{% url 'about' %}">About</a> |
+        <a href="{% url 'contact' %}">Contact</a> 
+    </nav>
+</div>
