--- a/templates/about.html
+++ b/templates/about.html
@@ -40,3 +40,12 @@
 </div>
 
 {% endblock %}
+
+{% block afterBody %}
+    <hr>
+    <div class="footer">
+       <footer class="container">
+           <p>© RideLookUp 2019</p>
+        </footer>
+    </div>
+{% endblock %}
