--- a/templates/base.html
+++ b/templates/base.html
@@ -27,8 +27,11 @@
 
 </body>
 
-<hr>
-<footer class="container">
-  <p>© RideLookUp 2019</p>
-</footer>
+{% block afterBody %}
+
+
+{% endblock %}
+
+
+
 </html>
