--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,13 +2,7 @@
     color: maroon;
 }
 
-.footer {
-  height: 70px;
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-}
+
 
 #motto {
   font-style: italic;
@@ -18,4 +12,18 @@
     text-align:justify;
     text-justify:inter-word;
 }
+
+.vehicle-model {
+  margin-top: 6px;
+}
+
+.vehicle-model:hover {
+  outline: 5px solid dodgerblue;
+}
+
+.purchase-font{
+    font-family: Consolas, Monaco, "Bitstream Vera Sans Mono", "Lucida Console", monospace;
+    font-size: 20px;
+}
+
 
