--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,12 +3,28 @@
 
 {% block title %}contact{% endblock %}
 
+
+
 {% block body %}
     <div class="container">
         <h2>Contact us below:</h2>
-        <form method="post" action="{% url 'contact' %}">{% csrf_token %}
-            {{form|crispy}}
-            <input type="submit" class="btn btn-primary" value="Send">
-        </form>
+        <div class="form-group col-lg-4">
+            <form method="post" action="{% url 'contact' %}">{% csrf_token %}
+                {{form|crispy}}
+                <input type="submit" class="btn btn-primary" value="Send">
+            </form>
+        </div>
+
     </div>
+{% endblock %}
+
+
+
+{% block afterBody %}
+<hr>
+<div class="footer">
+   <footer class="container">
+       <p>© RideLookUp 2019</p>
+    </footer>
+</div>
 {% endblock %}
