--- a/templates/create.html
+++ b/templates/create.html
@@ -5,7 +5,7 @@
 
 {% block body %}
     <div class="container">
-    <h2>Create vehicle data</h2>
+    <h2>Enter vehicle info</h2>
         <form method="post" action="{% url 'create' %}" enctype="multipart/form-data">{% csrf_token %}
             {{form|crispy}}<br>
             <input type="submit" value="create" class="btn btn-primary">
