--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,8 @@
 <div align="center">
     <nav>
         <a href="{% url 'index' %}">Home</a> |
-        <a href="{% url 'create' %}">Add</a> |
-        <a href="{% url 'search' %}">Search</a> |
+        <a href="{% url 'AppAuto:create' %}">Add</a> |
+        <a href="{% url 'AppAuto:search' %}">Search</a> |
         <a href="{% url 'about' %}">About</a> |
         <a href="{% url 'contact' %}">Contact</a> 
     </nav>
