--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
                 <div class="col-md-4" >
                     <div class="vehicle-model">
-                        <a href="{% url 'purchase' rides.id %}"><img src="{{MEDIA_URL}}{{rides.snapshot}}" alt="car Image" height="350" width="350" id="car_image"><br></a>
+                        <a href="{% url 'AppAuto:purchase' rides.id %}"><img src="{{MEDIA_URL}}{{rides.snapshot}}" alt="car Image" height="350" width="350" id="car_image"><br></a>
                         <b>Name:</b>{{rides.name}}<br>
                         <b>Model:</b>{{rides.model}}<br>
                         <b>Mileage:</b>{{rides.mileage}}<br>
